kubernetes/t1/tomcat-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tomcat-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: k8s-master
      http: 
       paths:
       - backend:
           serviceName: tomcat-service
           servicePort: 80
